# led-tools-api-mercado-livre

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: items.json  items.xlsx
src/: .env.example  access-token.py  export_led_tools_public.py  list_ledtools_items.py  ml_details.py  ml_item_details.py  ml_refresh_token.py  update-export_led_tools_public.py
src/cli/: export_full_stock_excel.py  export_full_stock_variations_excel.py  export_seller_items.py  json_to_excel.py  ml_details.py  ml_get_token.py  ml_refresh_token.py
src/ledtools_ml/: config.py  http.py  ml.py  normalize.py  oauth.py  tokens.py
